# localostack

./: .gitignore  LICENSE  README.md  TODOS.md  docker-compose.yml  pyproject.toml
.claude/plans/: architecture-design.md
.github/workflows/: docker.yml  pages.yml  pypi.yml  terraform.yml  test.yml
docker/: Dockerfile  docker-entrypoint.sh
docs/: CNAME  index.html
src/localostack/: __init__.py
src/localostack/admin/: app.py
src/localostack/cli/: main.py
src/localostack/core/: auth.py  config.py  fault_injection.py  gateway.py  models.py  persistence.py  state.py
src/localostack/providers/: base.py
src/localostack/providers/barbican/: app.py  routes.py  store.py
src/localostack/providers/cinder/: app.py  routes.py  store.py
src/localostack/providers/glance/: app.py  models.py  routes.py  store.py
src/localostack/providers/heat/: app.py  routes.py  store.py
src/localostack/providers/keystone/: app.py  models.py  routes.py  store.py
src/localostack/providers/neutron/: app.py  models.py  routes.py  store.py
src/localostack/providers/nova/: app.py  models.py  routes.py  state_machine.py  store.py
src/localostack/providers/octavia/: app.py  routes.py  store.py
src/localostack/providers/placement/: app.py  routes.py  store.py
src/localostack/providers/swift/: app.py  routes.py  store.py
tests/integration/: test_barbican.py  test_fault_injection_api.py  test_full_workflow.py  test_heat.py  test_octavia.py  test_openstacksdk.py  test_placement.py  test_swift.py
tests/terraform/: main.tf  test_terraform.sh
tests/unit/: test_cli.py  test_fault_injection.py
