[project]
name = "localostack"
version = "0.1.0"
description = "OpenStack API emulator for local development and testing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Jaehan Byun"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
]
keywords = ["openstack", "emulator", "mock", "testing", "localstack"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.scripts]
localostack = "localostack.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localostack"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "openstacksdk>=4.10.0",
]

[project.urls]
Homepage = "https://github.com/jaehanbyun/localostack"
Repository = "https://github.com/jaehanbyun/localostack"
Documentation = "https://jaehanbyun.github.io/localostack/"
Issues = "https://github.com/jaehanbyun/localostack/issues"
